# picklejar

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  compass_artifact_wf-a25c683a-8114-4a9b-9afd-819096f68991_text_markdown.md  rustfmt.toml  vector-compression-frontier-assessment.md
.claude/: settings.json
.github/workflows/: ci.yml
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  eval.rs  lib.rs  operator.rs  row.rs
crates/executor/tests/: row_proptest.rs
crates/picklejar-cli/src/: main.rs
crates/picklejar-difftest/src/: lib.rs
crates/picklejar-server/src/: lib.rs  main.rs  pgwire.rs  scram.rs  sha256.rs
crates/picklejar/src/: antientropy.rs  authsql.rs  blindvec.rs  bloom.rs  captoken.rs  certify.rs  consistenthash.rs  correlated.rs  crdtmem.rs  crdtvec.rs  cuckoo.rs  database.rs  faults.rs  forgetmem.rs  forwardlog.rs  grandcert.rs  hll.rs  hnsw.rs  index.rs  isolation_model.rs  ledger.rs  lib.rs  persist.rs  pir.rs  pq.rs  quantile.rs  quantize.rs  radiation.rs  rendezvous.rs  reservoir.rs  retrieval.rs  shamir.rs  skiplist.rs  spacesaving.rs  valid_time_model.rs  vclock.rs  vecsim.rs
crates/picklejar/tests/: bitemporal_valid_time.rs  corruption.rs  self_healing_heap.rs  transaction_time_travel.rs  vector_index_path.rs
crates/planner/: Cargo.toml
crates/planner/src/: binder.rs  catalog.rs  cost.rs  error.rs  explain.rs  lib.rs  logical.rs  physical.rs
crates/planner/tests/: end_to_end.rs  proptests.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs  net.rs
crates/rustdb/: Cargo.toml
crates/rustdb-cli/src/: main.rs
crates/rustdb-difftest/: Cargo.toml
crates/rustdb-difftest/src/: lib.rs
crates/rustdb-difftest/tests/: diff.rs
crates/rustdb-server/: Cargo.toml
crates/rustdb-server/src/: engine.rs  http.rs  json.rs  lib.rs  main.rs  pgwire.rs
crates/rustdb/src/: correlated.rs  database.rs  error.rs  index.rs  lib.rs  persist.rs
crates/rustdb/tests/: session.rs
crates/sql/: Cargo.toml
crates/sql/src/: ast.rs  decimal.rs  error.rs  lexer.rs  lib.rs  parser.rs  statement.rs  token.rs
crates/sql/tests/: proptests.rs
crates/storage/: Cargo.toml
crates/storage/src/: btree.rs  buffer.rs  crc32.rs  erasure.rs  error.rs  file.rs  header.rs  heap.rs  lib.rs  page.rs  resilient.rs
crates/storage/tests/: proptests.rs
crates/txn/: Cargo.toml
crates/txn/src/: error.rs  lib.rs  manager.rs  model.rs  mvcc.rs  version.rs  visibility.rs
crates/txn/tests/: proptests.proptest-regressions  proptests.rs
crates/wal/: Cargo.toml
crates/wal/src/: archive.rs  lib.rs  reader.rs  record.rs  recovery.rs  workload.rs  writer.rs
crates/wal/tests/: recovery_integration.rs
docs/: FEATURES.md  ROADMAP.md  design.md  gallery.md  quickstart.md  sprints.md  why-from-scratch.md
examples/: README.md  agent_memory.py
sdk/python/: pyproject.toml
