[package]
name = "picklejar-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AP (Dynamo-style) replication for the picklejar memory layer, proven to converge under partition by deterministic simulation."

[[bin]]
name = "repsim"
path = "src/bin/repsim.rs"

[[bin]]
name = "pjnode"
path = "src/bin/pjnode.rs"

[[bin]]
name = "repdemo"
path = "src/bin/repdemo.rs"

[dependencies]
picklejar.workspace = true

[lints]
workspace = true
