[package]
name = "rustdb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Servers for the rustdb engine: a PostgreSQL wire-protocol server and an HTTP/JSON API for the studio UI."

[lib]
name = "rustdb_server"
path = "src/lib.rs"

[[bin]]
name = "rustdb-server"
path = "src/main.rs"

[[bin]]
name = "rustdb-pg"
path = "src/bin/rustdb-pg.rs"

[dependencies]
rustdb.workspace = true
rustdb-sql.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
