[package]
name = "rustdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Top-level rustdb library - embeds storage, WAL, txn, SQL, planner, and executor."

[dependencies]
rustdb-storage.workspace = true
rustdb-wal.workspace = true
rustdb-txn.workspace = true
rustdb-sql.workspace = true
rustdb-planner.workspace = true
rustdb-executor.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
