[package]
name = "rustdb-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Page manager, buffer pool, and B+ tree for the rustdb engine."

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints]
workspace = true
